--- a/index.html
+++ b/index.html
@@ -20,23 +20,27 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
 
-    <script>
-      var firebaseConfig = {
-        apiKey: "AIzaSyAQ5VMAHEv55FmMG7Cvne5TFVoHzjem7iw",
-        authDomain: "multiplayergame-f6cbe.firebaseapp.com",
-        databaseURL: "https://multiplayergame-f6cbe.firebaseio.com",
-        projectId: "multiplayergame-f6cbe",
-        storageBucket: "multiplayergame-f6cbe.appspot.com",
-        messagingSenderId: "488741733610",
-        appId: "1:488741733610:web:9495da95518039d3"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCNnGofcgLb0wR6IKzsoQMYKGpkYWiV5cU",
+    authDomain: "playercarracing-game.firebaseapp.com",
+    databaseURL: "https://playercarracing-game-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "playercarracing-game",
+    storageBucket: "playercarracing-game.appspot.com",
+    messagingSenderId: "180555792083",
+    appId: "1:180555792083:web:fd936e3c3e487ef8791e26"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   </head>
   <body>
     <script src="./js/Game.js"></script>
